# cmake-proof-of-concept

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_EN.md
client/: CMakeLists.txt
example/: CMakeLists.txt
example/src/: main.c
server/: CMakeLists.txt
utils/: CMakeLists.txt
utils/src/utils/: joining.c  joining.h  stringlist.c  stringlist.h
utils/tests/: CMakeLists.txt  doctest.cpp  test_joining.cpp  test_stringlist.cpp
utils/tests/utils/: joining_test.c  joining_test.cpp
